[package]
name = "tartan-c-enum"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2021"
description = "Define FFI-safe enums that support unknown values"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-c-enum"
keywords = ["ffi", "enum"]
categories = ["rust-patterns", "no-std"]
